1-vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = var.aws_vpc_cidr

  enable_dns_support   = true
  enable_dns_hostnames = true
}
